lib/tests/fixtures/compiler/parser/ineffective.baseline
Error: ineffective.pp:1:1: ineffective statements may only appear as the last statement at top-level or inside functions and conditional expressions.
  1 + 2 + 3
  ^~~~~~~~~
