lib/tests/fixtures/compiler/parser/ineffective.pp
1 + 2 + 3
notice last
